hphp/test/zend/good/tests/classes/property_override_protectedStatic_private.php.expectf

Fatal error: Cannot redeclare static A::$p as non-static B::$p in %s/property_override_protectedStatic_private.php on line 11
